@@ -8,6 +8,7 @@ core 2.2.1 - not released yet
 	* Added: Form element time was not available
 	* Added: Todoyu.Form.isFirstInputInForm()
 	* Added: TodoyuFormElement::removeAttribute()
+	* Added: TodoyuFormElement_Select::setPleaseSelectLabel() to override label from php
 	* Changed: Use js version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
 	* Changed: Created instances for parsing form xml files to prevent overlapping when multiple forms are parsed parallel
